# rosdoc2

./: .flake8  .gitignore  CHANGELOG.rst  CODEOWNERS  README.md  requirements.txt  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: test.yml
doc/: index.rst.md  rosdoc2.yaml.md  testing.md  theory_of_operation.md
rosdoc2/: __init__.py  main.py  slugify.py
rosdoc2/verbs/default_config/: __init__.py  impl.py
rosdoc2/verbs/open/: __init__.py  impl.py
rosdoc2/verbs/scan/: __init__.py  get_packages.py  impl.py
test/: ex_test.yaml  test_builder.py  test_flake8.py  test_scan.py  test_various_repos.py  utils.py
