[metadata]
name = rosdoc2
version = attr: rosdoc2.__version__
url = https://github.com/ros-infrastructure/rosdoc2
project_urls =
    GitHub = https://github.com/ros-infrastructure/rosdoc2
author = William Woodall
author_email = william@openrobotics.org
maintainer = William Woodall
maintainer_email = william@openrobotics.org
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Documentation
license = Apache License, Version 2.0
description = Command line tool to build documentation for ROS packages.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rosdoc2

[options]
python_requires = >=3.6
install_requires =
    breathe
    catkin_pkg
    exhale
    Jinja2
    osrf_pycommon
    pyyaml
    rosdistro
    setuptools>=40.6.0
    sphinx
    sphinx-rtd-theme
    myst-parser
packages = find:
zip_safe = false

[options.extras_require]
test =
    flake8
    flake8-blind-except
    flake8-builtins
    flake8-class-newline
    flake8-comprehensions
    flake8-deprecated
    flake8-docstrings
    flake8-import-order
    flake8-quotes
    pytest

[options.package_data]
* = *.jinja

# [options.packages.find]
# exclude =
#     test
#     test.*

[tool:pytest]
# filterwarnings =
#     error
#     ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning
#     ignore:the imp module is deprecated in favour of importlib.*:PendingDeprecationWarning
junit_suite_name = rosdoc2
markers =
    flake8
    linter

[options.entry_points]
rosdoc2.verbs =
    build = rosdoc2.verbs.build:entry_point_data
    open = rosdoc2.verbs.open:entry_point_data
    default_config = rosdoc2.verbs.default_config:entry_point_data
    scan = rosdoc2.verbs.scan:entry_point_data
console_scripts =
    rosdoc2 = rosdoc2.main:main

# [options.package_data]
# colcon_core.shell.template = *.em

[flake8]
ignore =
    # One-line docstring should fit on one line with quotes
    D200
max-line-length = 99
import-order-style = google
